fix overflow, logo size...

--- a/styles/global.css
+++ b/styles/global.css
@@ -20,6 +20,7 @@ body {
     font-size: 18px;
     background-color: #eee;
     height: 100%;
+    overflow: hidden;
 }
 
 * {
